fixed dark mode text in groups page (#1099)

--- a/frontend/src/_styles/theme.scss
+++ b/frontend/src/_styles/theme.scss
@@ -1795,6 +1795,9 @@ input:focus-visible {
   .card {
     background-color: #324156 !important;
   }
+  .card .table tbody td a{
+    color: inherit;
+  }
 
   .DateInput {
     background: #1f2936;
